# vintergatan

./: .gitmodules  LICENSE  README.md  vintergatan.sln
vintergatan/: CMakeLists.txt  graphics.cpp  graphics.h  main.cpp  octree.cpp  octree.h  octree_tests.cpp  settings.h  simulation.cpp  simulation.h  testcases.cpp  testcases.h  vintergatan.vcxproj  vintergatan.vcxproj.filters
